# exam-extraction-pipeline

./: .dockerignore  .env  .env-example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  expected_output.json  pyproject.toml
src/: config.py  final_output.json  graph.py  graph_draw.py  image_extraction.py  main.py  pipeline.py  prompts.py  state.py  tools.py  utils.py
src/api/: dependencies.py  routes.py
src/exemplos/: ex0.py  ex1.py  ex10.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  output_ex4.json
src/extractors/: __init__.py  exam_extractor.py  image_extractor.py  text_extractor.py
src/models/: __init__.py  question.py
src/processors/: __init__.py  diagnostic_processor.py  exam_diagnostic_processor.py  question_processor.py  text_processor.py
src/prompts/: __init__.py  loader.py
src/prompts/diagnostic/: v1.md  v2.md  v3.md
src/prompts/structure_questions/: v1.md  v2.md  v3.md  v4.md
src/utils/: __init__.py  build_question_id.py  file_operations.py  image_encoding.py  llm.py
tests/: test_attach_images_to_question.py  test_diagnostic_returns_profile.py  test_final_output_precision.py
